Updates from Overleaf

--- a/report2.tex
+++ b/report2.tex
@@ -334,7 +334,7 @@ Respuestas
 
 \subsubsection{¿Es posible registrar el espectro de Fourier colocando un objeto detrás de la lente?}
 
-No porque 
+No porque el campo del objeto necesita transmitirse a través de la lente para obtener el espectro de Fourier en el plano focal, y para ello no importa dónde se sitúe el objeto, pero siempre delante de la lente. Si colocamos el objeto detrás de la lente, los patrones de intensidad que obtengamos no vendrán de rayos transmitidos a través de esta. La única posibilidad sería registrar la intensidad en campo lejano, pero se perdería mucha visibilidad. 
 
 
 
