--- a/report1.tex
+++ b/report1.tex
@@ -65,17 +65,17 @@ Se utilizó el test USAF 1951 (Fig.~\ref{fig:usaf1951}) como imagen general en l
 A través de las imágenes tomadas (figura~\ref{fig:group:usaf}) se obtiene un perfil ortogonal a las rendijas de contraste, para cada una de las distintas imágenes. Los resultados se discutirán en la sección~\ref{sec:mtf-directo} del apartado de Resultados experimentales. Este perfil es obtenido mediante un software diseñado en la plataforma de MATLAB.
 
 \begin{figure}[h]
-\centering
-\begin{subfigure}[t]{0.576\textwidth}\centering
-	\includegraphics[width=\textwidth]{/imaglineas.jpg}
-	\caption{Imágenes tomadas del test de USAF Fig.~\ref{fig:usaf1951} para la medida del MTF directo}\label{fig:images:example}
-\end{subfigure}
-\,
-\begin{subfigure}[t]{0.4\textwidth}\centering
-	\includegraphics[width=\textwidth]{smallest_lines}
-	\caption{Foto tomada durante la práctica de las líneas centrales del test USAF 1951}\label{fig:usafpic}
-\end{subfigure}
-\caption{Fotos tomadas durante la práctica}\label{fig:group:usaf}
+	\centering
+	\begin{subfigure}[t]{0.576\textwidth}\centering
+		\includegraphics[width=\textwidth]{/imaglineas.jpg}
+		\caption{Imágenes tomadas del test de USAF Fig.~\ref{fig:usaf1951} para la medida del MTF directo}\label{fig:images:example}
+	\end{subfigure}
+	\,
+	\begin{subfigure}[t]{0.4\textwidth}\centering
+		\includegraphics[width=\textwidth]{smallest_lines}
+		\caption{Foto tomada durante la práctica de las líneas centrales del test USAF 1951}\label{fig:usafpic}
+	\end{subfigure}
+	\caption{Fotos tomadas durante la práctica}\label{fig:group:usaf}
 \end{figure}
 
 
@@ -121,7 +121,7 @@ Un ejemplo de perfil estudiado para un conjunto de barras se muestra en la figur
 	\caption{Perfil de un segmento de líneas}\label{fig:perfil:example}
 \end{figure}
 
-En la tabla \ref{table:perfilintensidad} se recogen las medidas tomadas de los perfiles de intensidad para distintos conjuntos de barras, así como la frecuencia (líneas/mm) y el contraste calculados según las ecuaciones~\ref{eq:frecuencia} y~\ref{eq:contraste}.
+En la tabla~\ref{table:perfilintensidad} se recogen las medidas tomadas de los perfiles de intensidad para distintos conjuntos de barras, así como la frecuencia (líneas/mm) y el contraste calculados según las ecuaciones~\ref{eq:frecuencia} y~\ref{eq:contraste}.
 
 \begin{table}[hbp]
 	\centering
@@ -137,10 +137,10 @@ En la tabla \ref{table:perfilintensidad} se recogen las medidas tomadas de los p
 Representando el contraste de la imagen frente a la frecuencia (cliclos/mm) se obtiene la MTF del sistema (figura $~\ref{fig:mtf-directo}$).
 
 \begin{figure}
-    \centering
-    \includegraphics[scale=0.5]{MTF-directo.png}
-    \caption{MTF del sistema obtenida mediante el test de barras (método directo). Ajuste: $C = 1,05 \cdot 10^{-5} u^2 + 1,52 \cdot 10^{-3} u + 0,91$, donde u es la frecuencia y C el contraste.}
-    \label{fig:mtf-directo}
+	\centering
+	\includegraphics[scale=0.5]{MTF-directo.png}
+	\caption{MTF del sistema obtenida mediante el test de barras (método directo). Ajuste: $C = 1,05 \cdot 10^{-5} u^2 + 1,52 \cdot 10^{-3} u + 0,91$, donde u es la frecuencia y C el contraste.}
+	\label{fig:mtf-directo}
 \end{figure}
 
 El sistema se comporta como un filtro pasa baja. Las frecuencias superiores a la frecuencia de corte, con una transferencia teóricamente nula, no son captadas a la salida del sistema. En nuestro estudio comprobamos que los conjuntos de barras de más de 250-300 líneas/mm ya no aparecían resueltos en la imagen, aunque la presencia de ruido impedía visualizar frecuencias mayores.
@@ -176,10 +176,10 @@ En la figura~\ref{fig:perfil} se muestran los resultados de manera gráfica para
 Mediante un programa de MATLAB podemos calcular fácilmente la transformada de Fourier de la LSF mostrada en la figura~\ref{fig:perfil:graph} (gráfica derecha). Esta TF es la MTF del sistema (figura~\ref{fig:mtf-indirecto}).
 
 \begin{figure}
-    \centering
-    \includegraphics[scale=0.5]{/MTF-indirecto.png}
-    \caption{MTF del sistema obtenida mediante el test de borde (método indirecto)}
-    \label{fig:mtf-indirecto}
+	\centering
+	\includegraphics[scale=0.5]{/MTF-indirecto.png}
+	\caption{MTF del sistema obtenida mediante el test de borde (método indirecto)}
+	\label{fig:mtf-indirecto}
 \end{figure}
 
 La frecuencia de corte estimada con este método indirecto se sitúa entre 200 y 300 líneas/mm. Ambos métodos arrojan resultados parecidos, aunque no concuerdan con los predicho por la teoría. Comparando las gráficas de ambos métodos (figuras~\ref{fig:mtf-directo} y \ref{fig:mtf-indirecto}), vemos que el rango de frecuencias que pasan por el sistema es aproximadamente el mismo. Sin embargo, la caída del valor de la MTF es más acusada en el caso de este último método del test de borde. Esto evidencia que en las medidas de los máximos y mínimos de los perfiles de intensidad en el método directo se tomaron los valores más extremos del perfil, obteniéndose un contraste mayor que el contraste real de la imagen. Habiendo tomado como máximo un valor promedio de todos los máximos, y lo mismo para los mínimos, las dos gráficas habrían salido probablemente más parecidas aún.
@@ -237,98 +237,98 @@ Por lo tanto, la función $H_{i}(u)$ se puede obtener con el esquema descrito en
 
 
 \subsection{Para un sistema parecido al usado en la práctica:}\label{sec:cuestion:mtf}
-	\begin{enumerate}
-		\item Estimar la frecuencia de corte de la cámara CCD, $u_{c}^{(CCD)}$, en líneas por milímetro.
+\begin{enumerate}
+	\item Estimar la frecuencia de corte de la cámara CCD, $u_{c}^{(CCD)}$, en líneas por milímetro.
 
-	    La resolución de la cámara CCD está limitada por su tamaño de píxel. La frecuencia límite de un conjunto de barras que es capaz de resolver es aquella en la que cada barra tiene un tamaño de 1 px. La frecuencia de este conjunto de barras es la frecuencia de corte de la cámara, y viene dada por:
+	      La resolución de la cámara CCD está limitada por su tamaño de píxel. La frecuencia límite de un conjunto de barras que es capaz de resolver es aquella en la que cada barra tiene un tamaño de 1 px. La frecuencia de este conjunto de barras es la frecuencia de corte de la cámara, y viene dada por:
 
-	    \begin{equation}
-	        u_c^{(\textrm{CCD})} = \frac{1}{2s} = 108 \flatfrac{ciclos}{mm}
-	    \end{equation}
+	      \begin{equation}
+		      u_c^{(\textrm{CCD})} = \frac{1}{2s} = 108 \flatfrac{ciclos}{mm}
+	      \end{equation}
 
-		Donde $s=4,65 \mu m$ es el tamaño del píxel. Esta frecuencia corresponderá a la imagen formada por el objetivo, la cual está aumentada x10. Esto se tendrá en cuenta para calcular la MTF del sistema entero. La $u^{(\textrm{CCD})}$, no obstante, se da como la frecuencia de la imagen, que hace de objeto para la cámara.
+	      Donde $s=4,65 \mu m$ es el tamaño del píxel. Esta frecuencia corresponderá a la imagen formada por el objetivo, la cual está aumentada x10. Esto se tendrá en cuenta para calcular la MTF del sistema entero. La $u^{(\textrm{CCD})}$, no obstante, se da como la frecuencia de la imagen, que hace de objeto para la cámara.
 
-		\item Estimar la frecuencia de corte $u_{c}^{(Obj)}$ del objetivo $10\times$ para luz incoherente (la longitud de onda media $\lambda=500\,\unit{\nano\metre}$).
+	\item Estimar la frecuencia de corte $u_{c}^{(Obj)}$ del objetivo $10\times$ para luz incoherente (la longitud de onda media $\lambda=500\,\unit{\nano\metre}$).
 
-		La frecuencia de corte del objetivo viene dada por:
+	      La frecuencia de corte del objetivo viene dada por:
 
-		\begin{equation}
-		    u_c^{(\textrm{Obj})} = \frac{2 \textrm{NA}}{\lambda} = 1000 \flatfrac{ciclos}{mm}
-		\end{equation}
+	      \begin{equation}
+		      u_c^{(\textrm{Obj})} = \frac{2 \textrm{NA}}{\lambda} = 1000 \flatfrac{ciclos}{mm}
+	      \end{equation}
 
-		Donde $\textrm{NA}=0,25$ es la apertura numérica del objetivo en el espacio objeto. Al igual que para el cálculo de $u^{(\textrm{CCD})}$, esta frecuencia se da como la frecuencia del objeto, que en este caso es el propio objeto del sistema, la diapositiva del test USAF 1951.
+	      Donde $\textrm{NA}=0,25$ es la apertura numérica del objetivo en el espacio objeto. Al igual que para el cálculo de $u^{(\textrm{CCD})}$, esta frecuencia se da como la frecuencia del objeto, que en este caso es el propio objeto del sistema, la diapositiva del test USAF 1951.
 
-		\item Tomando estos valores y suponiendo que la PSF del objetivo y de la cámara se aproximan por la función $|\sinc(ax)|^2$, dibujar la MTF de cada uno de los elementos y del sistema compuesto.
+	\item Tomando estos valores y suponiendo que la PSF del objetivo y de la cámara se aproximan por la función $|\sinc(ax)|^2$, dibujar la MTF de cada uno de los elementos y del sistema compuesto.
 
-		La MTF de cada elemento es la transformada de Fourier (TF) normalizada de la PSF $|\sinc(ax)|^2$. El parámetro ``$a$'' será la frecuencia de corte $a=u_c^{(Obj)}$ en el caso del objetivo. Para la cámara, $a=10\, u_c^{(\textrm{CCD})}$, puesto que la imagen formada por el objetivo (el objeto de la cámara) está aumentada x10. De esta manera obtenemos la $\MTF(u)$ de la cámara en función de las frecuencias (u) de la diapositiva del test USAF 1951, igual que la $\MTF(u)$ del objetivo. Así, la MTF del sistema será el producto las MTF de los dos elementos del mismo.
+	      La MTF de cada elemento es la transformada de Fourier (TF) normalizada de la PSF $|\sinc(ax)|^2$. El parámetro ``$a$'' será la frecuencia de corte $a=u_c^{(Obj)}$ en el caso del objetivo. Para la cámara, $a=10\, u_c^{(\textrm{CCD})}$, puesto que la imagen formada por el objetivo (el objeto de la cámara) está aumentada x10. De esta manera obtenemos la $\MTF(u)$ de la cámara en función de las frecuencias (u) de la diapositiva del test USAF 1951, igual que la $\MTF(u)$ del objetivo. Así, la MTF del sistema será el producto las MTF de los dos elementos del mismo.
 
-		\begin{enumerate}
-		    \item MTF del objetivo y la cámara CCD:
+	      \begin{enumerate}
+		      \item MTF del objetivo y la cámara CCD:
 
-		    La TF de $|\sinc(ax)|^2$ es la función triangular con un factor $\flatfrac{1}{|a|}$:
-    		  \begin{equation}
-    		        \wedge(u)=
-		        \begin{cases}
-		        \frac{1}{|a|}\left(1-\abs{\frac{u}{a}}\right)   &\textrm{si   $|u| \leq 1$} \\
-                 0   &\textrm{si  $|u| \geq 1$}
-		        \end{cases}
-		    \end{equation}
+		            La TF de $|\sinc(ax)|^2$ es la función triangular con un factor $\flatfrac{1}{|a|}$:
+		            \begin{equation}
+			            \wedge(u)=
+			            \begin{cases}
+				            \frac{1}{|a|}\left(1-\abs{\frac{u}{a}}\right) & \textrm{si   $|u| \leq 1$} \\
+				            0                                             & \textrm{si  $|u| \geq 1$}
+			            \end{cases}
+		            \end{equation}
 
-		    La MTF para cada elemento es $\MTF(u) = \frac{\wedge(u)}{\wedge(0)}$, y $\wedge(0) = \frac{1}{|a|}$. Por tanto, para el objetivo quedaría:
-		        \begin{equation}
-    		       MTF^{(\textrm{Obj})}(u)=
-		       \begin{cases}
-                     1-\abs{\frac{u}{1000}} &\textrm{si   $|u| \leq 1$}  \\
-					0   &\textrm{si  $|u| \geq 1$}
-                     \end{cases}
-		    \end{equation}
+		            La MTF para cada elemento es $\MTF(u) = \frac{\wedge(u)}{\wedge(0)}$, y $\wedge(0) = \frac{1}{|a|}$. Por tanto, para el objetivo quedaría:
+		            \begin{equation}
+			            MTF^{(\textrm{Obj})}(u)=
+			            \begin{cases}
+				            1-\abs{\frac{u}{1000}} & \textrm{si   $|u| \leq 1$} \\
+				            0                      & \textrm{si  $|u| \geq 1$}
+			            \end{cases}
+		            \end{equation}
 
-		    Y para la cámara CCD:
-		    	\begin{equation}
-    		       MTF^{(\textrm{CCD})}(u)=
-		       \begin{cases}
-                     1-\abs{\frac{u}{1080}} &\textrm{si   $|u| \leq 1$} \\
-                     0   &\textrm{si  $|u| \geq 1$}
-               \end{cases}
-		    \end{equation}
+		            Y para la cámara CCD:
+		            \begin{equation}
+			            MTF^{(\textrm{CCD})}(u)=
+			            \begin{cases}
+				            1-\abs{\frac{u}{1080}} & \textrm{si   $|u| \leq 1$} \\
+				            0                      & \textrm{si  $|u| \geq 1$}
+			            \end{cases}
+		            \end{equation}
 
-		    Véase que la MTF de la cámara, $\wedge^{(\textrm{CCD})}(u)$, está en función de las frecuencias del objeto del sistema (la diapositiva USAF 1951), ya que vamos a obtener la MTF del sistema multiplicando las dos MTF.
+		            Véase que la MTF de la cámara, $\wedge^{(\textrm{CCD})}(u)$, está en función de las frecuencias del objeto del sistema (la diapositiva USAF 1951), ya que vamos a obtener la MTF del sistema multiplicando las dos MTF.
 
 
-		    \item MTF del sistema y representación gráfica
+		      \item MTF del sistema y representación gráfica
 
-		    La MTF del sistema viene dada por la ecuación~\ref{eq:mtf-teorica}. En la figura~\ref{fig:mtf-teorica} se muestran las MTF de los elementos y la del sistema conjunto.
+		            La MTF del sistema viene dada por la ecuación~\ref{eq:mtf-teorica}. En la figura~\ref{fig:mtf-teorica} se muestran las MTF de los elementos y la del sistema conjunto.
 
-		    \begin{align}
-		        \MTF(u) &= \MTF^{(Obj)}(u) \cdot \MTF^{(CCD)}(u) \\
-		        \MTF(u)&= 
-		        \begin{cases}
-                     \left(1-\abs{\frac{u}{1080}}\right)\left(1-\abs{\frac{u}{1000}}\right)  &\textrm{si   $|u| \leq 1$} \\
-                     0   &\textrm{si  $|u| \geq 1$}
-                \end{cases}
-                 \label{eq:mtf-teorica}
-			\end{align}
+		            \begin{align}
+			            \MTF(u) & = \MTF^{(Obj)}(u) \cdot \MTF^{(CCD)}(u) \\
+			            \MTF(u) & =
+			            \begin{cases}
+				            \left(1-\abs{\frac{u}{1080}}\right)\left(1-\abs{\frac{u}{1000}}\right) & \textrm{si   $|u| \leq 1$} \\
+				            0                                                                      & \textrm{si  $|u| \geq 1$}
+			            \end{cases}
+			            \label{eq:mtf-teorica}
+		            \end{align}
 
-		    \begin{figure}
-		        \centering
-		        \includegraphics[scale=0.45]{/MTF-teorica.png}
-		        \caption{MTF teóricas de los elementos del sistema y del sistema compuesto}
-		        \label{fig:mtf-teorica}
-		    \end{figure}
+		            \begin{figure}
+			            \centering
+			            \includegraphics[scale=0.45]{/MTF-teorica.png}
+			            \caption{MTF teóricas de los elementos del sistema y del sistema compuesto}
+			            \label{fig:mtf-teorica}
+		            \end{figure}
 
-		    Desarrollando el producto obtenemos la ecuación cuadrática que mencionamos en el estudio del método directo, aunque con distintos coeficientes:
+		            Desarrollando el producto obtenemos la ecuación cuadrática que mencionamos en el estudio del método directo, aunque con distintos coeficientes:
 
-		        \begin{equation*}
-		        MTF(u) = 9,3 \cdot 10^{-7} u^2 + 1,9 \cdot 10^{-3} u + 1
-		        \end{equation*}
+		            \begin{equation*}
+			            MTF(u) = 9,3 \cdot 10^{-7} u^2 + 1,9 \cdot 10^{-3} u + 1
+		            \end{equation*}
 
-		    La MTF del sistema tiene la misma forma que las obtenidas experimentalmente, aunque con una frecuencia de corte mayor. Esta viene determinada por la frecuencia de corte del objetivo (1000 líneas/mm), que es la más restrictiva de las frecuencias de corte de los dos elementos. Esto significa el tamaño de píxel de la cámara es lo suficientemente grande como para adquirir todas las frecuencias espaciales de las imágenes formadas por el objetivo.
+		            La MTF del sistema tiene la misma forma que las obtenidas experimentalmente, aunque con una frecuencia de corte mayor. Esta viene determinada por la frecuencia de corte del objetivo (1000 líneas/mm), que es la más restrictiva de las frecuencias de corte de los dos elementos. Esto significa el tamaño de píxel de la cámara es lo suficientemente grande como para adquirir todas las frecuencias espaciales de las imágenes formadas por el objetivo.
 
-		    Que la frecuencia de corte teórica sea tan alta respecto a la del experimento (1000 líneas/mm frente a unas 200-300 líneas/mm) puede deberse a diversas causas relacionadas con la no idealidad de la realidad experimental: ruido, aberraciones, etc., que no se han tenido en cuenta en el cálculo teórico. Concretamente, el ruido de las imágenes impidió diferenciar máximos y mínimos en los perfiles de intensidad de conjuntos de barras de mayor frecuencia, aunque estos fueron bien resueltos por la cámara CCD.
+		            Que la frecuencia de corte teórica sea tan alta respecto a la del experimento (1000 líneas/mm frente a unas 200-300 líneas/mm) puede deberse a diversas causas relacionadas con la no idealidad de la realidad experimental: ruido, aberraciones, etc., que no se han tenido en cuenta en el cálculo teórico. Concretamente, el ruido de las imágenes impidió diferenciar máximos y mínimos en los perfiles de intensidad de conjuntos de barras de mayor frecuencia, aunque estos fueron bien resueltos por la cámara CCD.
 
-		\end{enumerate}
+	      \end{enumerate}
 
-	\end{enumerate}
+\end{enumerate}
 
 
 \subsection{Aplicar usando el pluging Deconvolutionlab2 y Image J dos métodos de convolución: Regularized Inverse Filter y Richardson-Lucy a una imagen test obtenida por un sistema con una PSF conocida y diferentes tipos de ruido: Gauss y Poisson.}
@@ -349,15 +349,15 @@ Por lo tanto, la función $H_{i}(u)$ se puede obtener con el esquema descrito en
 	\caption{Imagen usada para la simulación con Deconvolutionlab2 y Image J, y el PSF del sistema de captura simulado}\label{fig:image:ref-psf}
 \end{figure}
 
- Simulamos tomar fotos de la imagen de referencia (Fig.~\ref{fig:ref}) con un systema con Point Spread Function (PSF) del sistema simulado (Fig.~\ref{fig:psf}). Queremos estudiar distintos tipos de ruido simulado y que algoritmos de de-noising actúan mejor para reducir este ruido.
+Simulamos tomar fotos de la imagen de referencia (Fig.~\ref{fig:ref}) con un systema con Point Spread Function (PSF) del sistema simulado (Fig.~\ref{fig:psf}). Queremos estudiar distintos tipos de ruido simulado y que algoritmos de de-noising actúan mejor para reducir este ruido.
 
- Realizamos las siguientes simulaciones de observación con ruido. (Las imágenes obtenidas se ven en Fig.~\ref{fig:convolutions})
+Realizamos las siguientes simulaciones de observación con ruido. (Las imágenes obtenidas se ven en Fig.~\ref{fig:convolutions})
 
 \begin{enumerate}
-    \item \emph{Noiseless convolution} (convolución sin ruido)
-    \item \emph{Simulation with noise-Gauss} (convolución con ruido Gaussiano. $\mu=0$, $\sigma=0.1$, y $0.01$
-    \item \emph{Simulation with noise-Poisson} (Convolución con ruido Poisson 0.01, 10 y 0.0001.
-    \item Aplicar a las imagenes anteriores \emph{Regularized Inverse filter (RIF)}: =0.01, =1.y Richardson-Lucy (RL) algorithm con 10 y 50 iteraciones. Probamos 100 iteraciones para una caso y comparar con 50 iteraciones
+	\item \emph{Noiseless convolution} (convolución sin ruido)
+	\item \emph{Simulation with noise-Gauss} (convolución con ruido Gaussiano. $\mu=0$, $\sigma=0.1$, y $0.01$
+	\item \emph{Simulation with noise-Poisson} (Convolución con ruido Poisson 0.01, 10 y 0.0001.
+	\item Aplicar a las imagenes anteriores \emph{Regularized Inverse filter (RIF)}: =0.01, =1.y Richardson-Lucy (RL) algorithm con 10 y 50 iteraciones. Probamos 100 iteraciones para una caso y comparar con 50 iteraciones (Fig.~\ref{fig:filtros:comparacion})
 \end{enumerate}
 
 Al realizar el tratado de las imágenes a las cuales se le aplicó ruido, podemos observar a ante la aplicación de un RIF menor con un número de iteraciones menor, se visualiza una recuperación de la imagen mejor filtrada, en cambio, a mayor número de los parámetros anteriormente mencionados la imagen coge más ruido, hasta degradándose en sus colores originales.
@@ -371,19 +371,19 @@ Por otro lado, la deconvolución de Richardson-Lucy, al ser procedimiento iterat
 		\begin{subfigure}[t]{0.25\textwidth}\centering
 			\centering
 			\includegraphics[width=\textwidth]{Simulation deconvolution/ref_conv}
-			\caption{Convolution noiseless}\label{fig:sim:conv}
+			\caption{Noiseless}\label{fig:sim:conv}
 		\end{subfigure}
 		\,\hfill
 		\begin{subfigure}[t]{0.25\textwidth}\centering
 			\centering
 			\includegraphics[width=\textwidth]{Simulation deconvolution/ref_ng_0.1}
-			\caption{Convolution NG. $Mean=0$, $Stdev=0.1$}\label{fig:sim:ng0.1}
+			\caption{Gaussian noise. $\mu=0$, $\sigma=0.1$}\label{fig:sim:ng0.1}
 		\end{subfigure}
 		\hfill
 		\begin{subfigure}[t]{0.25\textwidth}\centering
 			\centering
 			\includegraphics[width=\textwidth]{Simulation deconvolution/ref_ng_0.01}
-			\caption{Convolution NG. $Mean=0$, $Stdev=0.01s$}\label{fig:sim:ng0.01}
+			\caption{Gaussian noise. $\mu=0$, $\sigma=0.01$}\label{fig:sim:ng0.01}
 		\end{subfigure}
 		\hfill\,
 		\\
@@ -391,19 +391,19 @@ Por otro lado, la deconvolución de Richardson-Lucy, al ser procedimiento iterat
 		\begin{subfigure}[t]{0.25\textwidth}\centering
 			\centering
 			\includegraphics[width=\textwidth]{Simulation deconvolution/ref_np_0.01}
-			\caption{Convolution NP 0.01}\label{fig:sim:np0.01}
+			\caption{Poisson noise $\lambda = 0.01$}\label{fig:sim:np0.01}
 		\end{subfigure}
 		\hfill
 		\begin{subfigure}[t]{0.25\textwidth}\centering
 			\centering
 			\includegraphics[width=\textwidth]{Simulation deconvolution/ref_np_0.0001}
-			\caption{Convolution NP 0.0001}
+			\caption{Poisson noise $\lambda = 0.0001$}
 		\end{subfigure}
 		\hfill
 		\begin{subfigure}[t]{0.25\textwidth}\centering
 			\centering
 			\includegraphics[width=\textwidth]{Simulation deconvolution/ref_np_10}
-			\caption{Convolution NP 10}
+			\caption{Poisson noise $\lambda =  10$}
 		\end{subfigure}
 		\hfill\,
 		\caption{Simulación de la figura~\ref{fig:image:ref-psf} con distintos tipos de ruido}\label{fig:convolutions}
@@ -440,10 +440,36 @@ Por otro lado, la deconvolución de Richardson-Lucy, al ser procedimiento iterat
 		\includegraphics[scale=0.25]{Simulation deconvolution/ref_np_0.01/RL_50.png}
 		\\
 	\end{tabular}
-	\caption{Matriz de los filtros realizados para recuperar las imágenes con ruido añadido simulado. Cada fila d se corresponde a una figura de \ref{fig:convolutions} (a--d), cada columna indica un método de recuperación}
+	\caption{Matriz de los filtros realizados para recuperar las imágenes con ruido añadido simulado. Cada fila d se corresponde a una figura de \ref{fig:convolutions} (a--d), cada columna indica un método de recuperación.}
 \end{figure}
 
 
+\begin{figure}
+	\begin{tabular}{c c | c c c}
+		RIF 1                                                                               &
+		RIF 0.01                                                                            &
+		RL 10                                                                               &
+		RL 50                                                                               &
+		RL 100
+		\\
+		\includegraphics[scale=0.25]{Simulation deconvolution/ref_np_0.01/RIF_1}            &
+		\includegraphics[scale=0.25]{Simulation deconvolution/ref_np_0.01/RIF_0.01}         &
+		\includegraphics[scale=0.25]{Simulation deconvolution/ref_np_0.01/RL_10}            &
+		\includegraphics[scale=0.25]{Simulation deconvolution/ref_np_0.01/RL_50}            &
+		\includegraphics[scale=0.25]{Simulation deconvolution/ref_np_0.01/RL_100}
+		\\    \hline
+		                                                                                    &   & Comparacion &
+		$\frac{\textrm{RL 100}}{\textrm{RL 50}}$                                            &
+
+		$\textrm{RL 100} - \textrm{RL 50}$
+		\\	                                                                                     & & &
+		\includegraphics[scale=0.25]{Simulation deconvolution/ref_np_0.01/RL_100_div_RL_50} &
+
+		\includegraphics[scale=0.25]{Simulation deconvolution/ref_np_0.01/RL_50_mins_RL_100}
+	\end{tabular}
+	\caption{Comparación exhaustiva de distintos métodos de tratar de filrar la imágen con filtro inicial de Poisson $\lambda = 0.01$ Se observa como a partir de RL 50, la diferencia entre ambos métodos no cambia mucho aunque se doblen las iteraciones. }\label{fig:filtros:comparacion}
+
+\end{figure}
 %%%%%%%%%% If using BibTeX:
 \bibliography{bibliography}
 
